<resources>
    <string name="app_name">隐云图解制作</string>
    <string name="main_information_title">说明</string>
    <string name="main_information_content">
    快速制作电影图解或对白截图
    \n
    经常在网上看到别人制作的电影台词的长截图？想要自己制作一张？一张一张截图后剪切再拼接很麻烦？
    \n
    有了隐云图解制作，你就可以边看视频边截图，当视频播放完后你的截图也已经处理完毕。
    \n
    可用于制作电影图解、电影对白图片等，也可用于获取视频中的任何一帧精彩画面。
    \n
    不仅如此，隐云图解制作还提供了截取GIF功能，在截图的任意位置添加文字功能等。
    \n
    对于截图er，我们提供了逐帧选优功能，从此不再因为想要截取一闪而过的画面而按到手软！
    \n
    对于画质er，我们提供了截取原视频原画质功能！
    \n
    对于发烧友，我们提供了自定义 FFmpeg 命令！
    \n
    更多功能等你探索！\n\n
        注意：\n
        从 1.1 版本开始app名称已更改为 隐云图解制作。
        \n
        重要提示：\n
        有很多应用平台出现了本app的二次打包版本，且被添加了强制下载的广告，虽然我一直在努力和平台交涉，但是始终无法让官方将其下架，所以，只能提醒各位用户当心盗版！\n
        \t默认合成图片保存目录在 %1$s \n
        \t推荐直接直接使用系统图库查看\n
        \n\n\n
    </string>
    <string name="about_updateHistory_text" translatable="false">
        2.0 finir Fix03：\n
        \t*修改意见反馈方式(因个人服务器到期，无力继续支持，故改为接入第三方反馈服务)\n
        \t*修复使用 ShortCuts 时未授予权限导致闪退的问题\n
        \t*修复因为图片尺寸不均等问题导致的合成图片高度和数量不对的问题\n
        \t*修复除黑边时尺寸问题导致闪退的BUG\n
        \t*修复因为文件损坏导致闪退的问题\n
        \t*修复校验数据包失败导致闪退的问题\n
        \t*修复因内存不足自动降低生成图片质量导致闪退的问题\n
        2.0 finir Fix02：\n
        \t*新增生成图片时自动裁剪第一张全图\n
        \t*新增选项是否裁剪所有全图\n
        \t*修复第二次使用合成截图模式时图片选择未清空的问题\n
        \t*修复若干BUG\n
        2.0 finir Fix01：\n
        \t*优化捐赠逻辑\n
        \t*优化逐帧选优使用逻辑\n
        \t*修复删除文件时未刷新相册的问题\n
        \t*修复AB模式下载识别库校验时概率性闪退的BUG\n
        \t*修复合成图片时全部标记为删除时预览图片闪退的BUG\n
        2.0 finir：\n
        \t*增加全新的智能合成模式\n
        \t*更加自由的截取功能，现在已经支持完全的控制裁剪区域\n
        \t*重构生成图片界面\n
        \t*去除黑边现在支持同时检测上下左右四个方向的黑边\n
        \t*优化部分UI，更换首页图标，更换整体配色方案\n
        \t*优化图片预览方式，避免因图片太大而闪退\n
        \t*优化首页瀑布流加载流程\n
        \t*优化制作完成后的返回流程\n
        \t*优化外部程序截图时截图尺寸判断\n
        \t*优化 shortcuts\n
        \t*优化外部程序截图模式，修复多个BUG\n
        \t*其他细节的优化与大量BUG的修复\n
        1.5 léger Fix02:\n
        \t*优化删除文件\n
        \t*修复因为去除黑边失败导致闪退的问题\n
        \t*修复无法连续使用逐帧选优的问题\n
        \t*修复获取预览图片失败导致闪退的问题\n
        1.5 léger Fix01:\n
        \t*新增截取高质量GIF功能\n
        \t*修复关闭截取为JPG时的除黑边错误\n
        \t*修复复制缓存文件出错闪退的问题\n
        \t*修复安卓5.0以下设备因兼容性问题闪退的问题\n
        1.5 léger:\n
        \t*更加美观实用的播放界面\n
        \t*外部程序截图模式支持截取GIF\n
        \t*修复安卓7.0以上用户闪退的问题\n
        1.4 Pureté Fix6:\n
        \t*修复生成图片时对话框为正常关闭导致的闪退\n
        \t*修复多选删除图片导致的闪退\n
        \t*修复在外部程序截图模式下标记图片时预览图尺寸出错的问题\n
        \t*修复在文件名含有空格时无法截取GIF的问题\n
        1.4 Pureté Update05:\n
        \t*支持多选删除图片\n
        \t*支持同时预览所有图片\n
        \t*优化逐帧选优功能：现在可以在截取后对图片进行选择保存\n
        \t*优化首页长按菜单体验\n
        \t*修复若干可能引发闪退的BUG\n
        1.4 Pureté Fix04:\n
        \t*新增删除作品时是否删除本地文件\n
        \t*修复无法点击删除文件时确定按钮的BUG\n
        \t*修复某些可能引起闪退的BUG\n
        1.4 Pureté Update03:\n
        \t*首页瀑布流展示支持自定义排序方式\n
        \t*修复若干可能引发闪退的BUG\n
        1.4 Pureté Fix02:\n
        \t*新增英文语言支持\n
        \t*优化部分动画效果\n
        \t*优化FFmpeg命令行使用体验\n
        \t*修复概率性出现漏截的BUG\n
        1.4 Pureté Fix01:\n
        \t*修复若干BUG\n
        1.4 Pureté:\n
        \t*去除所有广告\n
        \t*得益于广告的去除，我们同时去除了多余的权限\n
        \t*继续为APK做减肥，体积再减少18%\n
        \t*优化裁剪字幕体验\n
        \t*优化跳转商店体验\n
        \t*优化逐帧选优体验\n
        \t*优化视频播放时的体验\n
        \t*优化FFmpeg命令行体验\n
        \t*修复生成文件名可能出现冲突的BUG\n
        \t*修复部分机型SnackBar与虚拟按键冲突的BUG\n
        \t*修复合成截图模式无限转圈的BUG\n
        1.3 Chimérique Fix04:\n
        \t*优化截取GIF时分辨率的选择\n
        \t*优化标记图片时的显示方式\n
        1.3 Chimérique Fix01-03:\n
        \t*修复点击首页加载提示导致闪退的BUG\n
        \t*修复某些机型获取视频或图片路径出错的BUG\n
        \t*修复更改顺序后闪退的BUG\n
        \t*修复首页预览图片错误\n
        \t*修复首页 snackbar 弹出错误\n
        \t*修复 Flyme 权限申请失败的BUG\n
        \t*修复某些机型使用 外部程序截图 闪退的BUG\n
        \t*修复某些ROM不支持截取屏幕导致闪退的 BUG\n
        1.3 Chimérique:\n
        \t*重构大量代码与UI\n
        \t*新增新手引导\n
        \t*优化权限申请流程\n
        \t*优化截取GIF时的体验\n
        \t*减少安装包体积\n
         1.2 Fix 06:\n
        \t*优化反馈流程\n
        \t*修复因获取视频路径失败闪退的BUG（感谢 shizhan856****@163.com 的反馈）\n
        \t*修复因获取视频长度失败闪退的BUG\n
        \t*修复加载视频时因视频格式不支持等其他错误导致闪退的BUG\n
        1.2 Fix 05:\n
        \t*修复外部程序截图时自动去除黑边失败的BUG\n
        1.2 Update 04:\n
        \t*增加退出自动清除缓存\n
        \t*修改添加文字时默认背景为全透明\n
        \t*优化添加文字时选择颜色的可视化过程\n
        \t*优化添加文字的撤销操作\n
        \t*优化某些界面的Toolbar\n
        \t*修复添加文字时无法完全填充背景的错误\n
        1.2 Update 03:\n
        \t*优化播放体验：\n
        \t使用横屏播放时增加时间轴\n
        \t优化手势操作\n
        1.2 Update 02:\n
        \t*增加 shortcut\n
        \t*外部程序截图模式适配安卓 8.0\n
        \t*修复使用外部程序截图时按钮概率性无法隐藏的BUG\n
        \t*适配圆形图标\n
        1.2 Fix 01:\n
        \t*增加微信分享组件\n
        \t*修复加载视频失败闪退的BUG\n
        \t*修复因无悬浮窗权限导致闪退的BUG\n
        \t*修复因获取图片失败导致闪退的BUG\n
        \t*修复因在安卓低版本上不兼容某些库导致闪退的BUG\n
        \t*修复在安卓7.0以上无法分享图片的BUG\n
        \t*修复因获取缓存目录失败导致闪退的BUG\n
        \t*优化授权体验\n
        1.2 Oublier:\n
        \t*支持截图后对图片进行排序（感谢 @方霖、@q1075715*** 的反馈）\n
        \t*新增更多新手指导\n
        \t*增加QQ分享组件，分享作品更加方便快捷！（微信分享稍后增加）\n
        \t*增加广告（可以永久关闭）\n
        \t*优化设置\n
        \t*大幅优化内存使用策略，降低因内存不足闪退的情况\n
        \t*添加内存使用监听，当内存不足时不会闪退而是提示更改图片质量设置\n
        \t*支持自定义图片质量，可在降低图片质量的情况下合成更多图片\n
        \t*优化撤销操作（感谢 @xiajichen 的反馈）\n
        \t*修复大量可能导致app崩溃的隐患\n
        \t*优化部分UI交互体验\n
        1.1 Update 02:\n
        \t*修复某些机型无法获取悬浮窗权限的BUG\n
        \t*优化反馈方式\n
        \t*增加自动上传崩溃日志\n
        \t*增加自动检查更新\n
        1.1 Fix 01:\n
        \t*修复关闭压缩图片后使用外部程序截图导致合成图片有大片透明的BUG （感谢 @蜜汁炖鱿鱼 的反馈）\n
        \t*修复高级功能中选择文件未过滤类型的BUG\n
        1.1 Update 01:\n
        \t*主界面UI重构\n
        \t*新增逐帧选优模式\n
        \t*FFmpeg命令新增快速插入时间\n
        1.1:\n
        \t*更改app名为 隐云图解制作\n
        \t*添加文字支持设置文字背景颜色\n
        \t*添加文字支持自定义位置\n
        \t*修复截取GIF动图时时间不准的BUG（感谢 @Qloulia 的反馈）\n
        1.0 Fix 02:\n
        \t*修复使用外部程序截图时出现未响应的BUG\n
        \t*修复在选择图片时闪退的BUG\n
        \t*修复因图片裁切时图片不一致导致闪退的BUG\n
        （若高度不符合将使用默认高度裁切, 宽度不符合将使用最大宽度，我已发现当前版本剪裁存在较大问题，下个版本将更换剪裁算法）\n
        1.0 Fix 01:\n
        \t*降低使用外部程序截图时崩溃的概率\n
        1.0:\n
        \t*增加合成已有截图模式\n
        \t*增加截取在线视频模式\n
        \t*增加截取gif动图功能\n
        \t*增加添加文字时使用取色板取色功能\n
        \t*优化生成图片后系统图库的刷新\n
        \t*优化部分手势的体验\n
    </string>
    <string name="about_right_text">
        GSYVideoPlayer：https://github.com/CarGuo/GSYVideoPlayer  \n
        -------------\n
        FloatWindowPermission：https://github.com/zhaozepeng/FloatWindowPermission  \n
        -------------\n
        ScreenCapture ： https://github.com/goodbranch/ScreenCapture  \n
         -------------\n
        FFmpeg-Android：https://github.com/equationl/FFmpeg-Android \n
         -------------\n
        GalleryPick：https://github.com/YancyYe/GalleryPick \n
         -------------\n
        glide：https://github.com/bumptech/glide  \n
        --------------\n
        ColorPicker：https://github.com/DingMouRen/ColorPicker   \n
        --------------\n
        HandyGridView：https://github.com/huxq17/HandyGridView   \n
        --------------\n
        okHttp：https://github.com/square/okhttp/   \n
        --------------\n
        floatingactionbutton: https://github.com/futuresimple/android-floating-action-button/  \n
        --------------\n
        FancyShowCaseView: https://github.com/faruktoptas/FancyShowCaseView \n
        --------------\n
        BigImageViewPager: https://github.com/SherlockGougou/BigImageViewPager \n
        --------------\n
        SwipeCardsView: https://github.com/huxq17/SwipeCardsView \n
        --------------\n
        AutoLoadmore: https://github.com/burgessjp/AutoLoadmore \n
        --------------\n
        GADownloading：https://github.com/Ajian-studio/GADownloading  \n
        --------------\n
        okdownload：https://github.com/lingochamp/okdownload    \n
        --------------\n
        ImageCrop：https://github.com/guoyanqiu/ImageCrop   \n
        --------------\n
        特别感谢：\n
        --------------\n
        Bugly：https://bugly.qq.com   \n
        Material Design Icons：https://materialdesignicons.com    \n
        Iconfont：https://www.iconfont.cn   \n
        Baidu AI：http://ai.baidu.com    \n
        LeanCloud：https://leancloud.cn   \n
        以及 tyanboot.pw 对本app的支持
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="main_mail_title">《视频截图》意见反馈</string>
    <string name="main_mail_content">
          \t应用版本：%1$s
\n        \t系统版本：%2$s
\n        \t手机型号：%3$s
    </string>
    <string name="feedback_content_hint">请输入您的意见或在使用中遇到的问题</string>
    <string name="feedback_email_hint">请务必留下您的联系方式（如邮箱）</string>
    <string name="feedback_button_submit_text">提交</string>
    <string name="feedback_button_posting_text">提交中&#8230;</string>
    <string name="feedback_toast_content_null">内容不能为空！</string>
    <string name="feedback_toast_email_null">邮箱不能为空！</string>
    <string name="feedback_toast_postSuccessful">提交成功!稍后我们将会与您联系。</string>
    <string name="feedback_dialog_postFail_btn_retry">重试</string>
    <string name="feedback_dialog_postFail_btn_sendBySelf">手动发送</string>
    <string name="feedback_dialog_postFailNet_content">发送反馈失败！请检查您的网络连接或是否授予了本app联网权限。\n如重试后仍然无法发送，请选择手动发送。</string>
    <string name="feedback_dialog_postFailServer_content">非常抱歉，因为服务器原因导致反馈发送失败，您可以选择重试或者手动发送。</string>
    <string name="main_dialog_btn_cancel">取消</string>
    <string name="main_dialog_btn_ok">确定</string>
    <string name="main_dialog_title_hint">提示</string>
    <string name="main_dialog_deletePic_title">您确定要删除吗？</string>
    <string-array name="main_dialog_deletePic_content">
        <item>同时删除本地文件</item>
    </string-array>
    <string name="main_dialog_deleteAllPic_title">您确定要删除选中的图片吗？</string>
    <string name="main_dialog_disablePermission_content">请在 应用设置-权限 中，至少允许 %1$s 使用存储权限来保存您的作品</string>
    <string name="main_dialog_disablePermission_title">未授予足够的权限</string>
    <string name="main_dialog_noPermission_title">授予权限</string>
    <string name="main_dialog_noPermission_content">您需要授予储存权限给我，我才能保存您的作品哦~</string>
    <string name="main_floatBtn_menu_quick">快速开始</string>
    <string name="main_floatBtn_menu_splicing">合成截图</string>
    <string name="main_floatBtn_menu_shotScreen">外部程序截图</string>
    <string name="main_floatBtn_menu_frameByFrame">逐帧选优</string>
    <string name="main_menu_refresh">刷新</string>
    <string name="main_menu_MultiSelect">多选</string>
    <string name="main_menu_sort_title">排序</string>
    <string name="main_menu_sort_date_dese">时间（降序）</string>
    <string name="main_menu_sort_date_asc">时间（升序）</string>
    <string name="main_menu_sort_type">类型</string>
    <string name="main_menu_isDirFirst">合集始终在前</string>
    <string name="pref_title_watermark">添加水印</string>
    <string name="pref_description_watermark">选择是否在图片合成后添加水印
    </string>
    <string name="pref_title_shot_jpg">截取为jpg</string>
    <string name="pref_description_shot_jpg">选择是否在截取图片时保存为jpg（使用jpg能大幅减少图片大小，但是质量会略微有所降低）</string>
    <string name="pref_title_hide_btn">单击隐藏界面</string>
    <string name="pref_description_hide_btn">选择是否在全屏播放时单击屏幕显示/隐藏界面</string>
    <string name="pref_title_monitored_show">实时预览</string>
    <string name="pref_description_monitored_show">选择是否在合成图片时实时预览（开启后可能会内存溢出闪退，建议关闭）</string>
    <string name="pref_title_reduce">压缩图片</string>
    <string name="pref_description_reduce">选择是否在导出时压缩图片（仅降低质量，不改变分辨率）
    </string>
    <string name="pref_title_display_watermark">水印文字</string>
    <string name="pref_default_display_watermark">使用 隐云图解制作 生成</string>
    <string name="pref_title_reduce_value">图片质量</string>
    <string name="pref_title_watermark_position">水印位置</string>
    <string name="pref_title_isShotGif">长按截取动图</string>
    <string name="pref_description_isShotGif">选择是否在截取图片时长按 截取按钮 截取GIF动图</string>
    <string name="pref_title_gif_RP">动图分辨率（对于高清视频和高分辨率手机不建议开启原图）</string>
    <string name="pref_title_gif_frameRate">动图帧率（对于高清视频和高分辨率手机不建议开启原帧率）</string>
    <string name="shortcut_quick_ShortLabel">快速开始</string>
    <string name="shortcut_quick_LongLabel">快速开始</string>
    <string name="shortcut_float_ShortLabel">开始截图</string>
    <string name="shortcut_float_LongLabel">外部程序截图</string>
</resources>