<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="quick"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher_round"
        android:shortcutShortLabel="@string/shortcut_quick_ShortLabel"
        android:shortcutLongLabel="@string/shortcut_quick_LongLabel">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.equationl.videoshotpro"
            android:targetClass="com.equationl.videoshotpro.ShortCutsActivity"
            android:data="quick"/>
        <categories android:name="android.shortcut.conversation"/>
    </shortcut>

    <shortcut
        android:shortcutId="float"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher_round"
        android:shortcutShortLabel="@string/shortcut_float_ShortLabel"
        android:shortcutLongLabel="@string/shortcut_float_LongLabel">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.equationl.videoshotpro"
            android:targetClass="com.equationl.videoshotpro.ShortCutsActivity"
            android:data="float"/>
        <categories android:name="android.shortcut.conversation"/>
    </shortcut>
</shortcuts>