<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.equationl.videoshotpro.MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:background="#F0F0F0">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/main_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:paddingTop="50dp" />

    <FrameLayout
        android:id="@+id/main_bannerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/main_floatBtn_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        fab:menu_labels_ellipsize="end"
        fab:menu_labels_singleLine="true"
        fab:menu_backgroundColor="#ccffffff">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/main_floatBtn_quick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/float_button"
            fab:fab_size="mini"
            fab:fab_label="@string/main_floatBtn_menu_quick"
            style="@style/MainFloatButtonStyle"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/main_floatBtn_splicing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            fab:fab_size="mini"
            fab:fab_label="@string/main_floatBtn_menu_splicing"
            style="@style/MainFloatButtonStyle"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/main_floatBtn_shotScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher_round"
            fab:fab_size="mini"
            fab:fab_label="@string/main_floatBtn_menu_shotScreen"
            style="@style/MainFloatButtonStyle"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/main_floatBtn_frameByFrame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/float_button"
            fab:fab_size="mini"
            fab:fab_label="@string/main_floatBtn_menu_frameByFrame"
            style="@style/MainFloatButtonStyle"/>

    </com.github.clans.fab.FloatingActionMenu>

</android.support.constraint.ConstraintLayout>
